ingress/production-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: production-ingress-resource
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
    host: guestbook.mstakx.io
